--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>SAMPLE PAGE</title>
 </head>
 <body>
-   <h2>ANOTHER TITLE</h2>
+   <h1>ANOTHER TITLE</h1>
+   <p>another para</p>
 </body>
 </html>
